Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/neg/Z14.out
Z14.java:10:15: compiler.err.intf.annotation.cant.have.type.params: An
1 error
